--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,11 @@
-export(easi,engel,elastic,simulations,equiv.income,concavity)
-import(systemfit)
-import(stats)
-import(micEcon)
 S3method(coef, easi)
 S3method(predict, easi)
 S3method(residuals, easi)
 S3method(summary, easi)
 S3method(vcov, easi)
+export(concavity)
+export(easi)
+export(elastic)
+export(engel)
+export(equiv.income)
+export(simulations)
